@@ -5,7 +5,9 @@ In 2.13.0.0
 
  - Bugfixes.
  - New functions: buffer_timed_put(), buffer_timed_puts().
- - strerr.h revamped. strerr_die, strerr_warn, strerr_diesys, strerr_warnsys removed.
+ - strerr.h revamped. strerr_die, strerr_warn, strerr_diesys, strerr_warnsys
+and all the previous strerr2 macros are now __VA_ARGS__ macros around
+strerr_diev() and friends.
 
 
 In 2.12.0.1
